syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
option java_package = "hospital.server.grpc";
package Patient;
option java_outer_classname = "PatientOuterClass";
// The gRPC service definitions for Hospital and Patient management
service PatientServiceEndpoint {

  rpc CreatePatient (CreatePatientRequest) returns (PatientResponse) {}
  rpc UpdatePatient (UpdatePatientRequest) returns (PatientResponse) {}
  rpc DeletePatient (DeletePatientRequest) returns (DeleteResponse) {}
  rpc RegisterPatientInHospital (RegisterPatientRequest) returns (RegisterPatientResponse) {}
  rpc ListPatientsByHospitalId (ListByHospitalIdRequest) returns (ListPatientsResponse) {}
  rpc ListAllPatients(google.protobuf.Empty) returns (ListPatientsResponse){}
  rpc FindById(FindByIdRequest) returns (PatientResponse);


}

message ListByHospitalIdRequest {
  int64 hospitalId = 1;
}

message RegisterPatientResponse {
  bool success = 1;
}
// Request and Response messages
message FindByIdRequest {
  int64 id = 1;
}

message CreatePatientRequest {
  string name = 1;
  string lastName = 2;
  string birthDate = 3;
  string sex = 4;
}

message UpdatePatientRequest {
  int64 id = 1;
  string name = 2;
  string lastName = 3;
  string birthDate = 4;
  string sex = 5;
}

message DeletePatientRequest {
  int64 id = 1;
}

message RegisterPatientRequest {
  int64 patientId = 1;
  int64 hospitalId = 2;
}







message PatientResponse {
  int64 id = 1;
  string name = 2;
  string lastName = 3;
  string birthDate = 4;
  string sex = 5;
}

message DeleteResponse {
  bool success = 1;
}

message ListPatientsResponse {
  repeated PatientResponse patients = 1;
}


